# BELLA-RCF-Stack

./: CMakeLists.txt  README.md  braggProfiler.cc
include/: ActionInitialization.hh  DetectorConstruction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
scripts/: dose_depth.py  geomConfig.txt  nearest_detector.py  testrun.mac  vis.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
